added min-widht to add-timeslot-button

--- a/public/mobile.css
+++ b/public/mobile.css
@@ -283,7 +283,7 @@ button {
 
 #add-timeslot-button {
     margin: auto;
-    height: fit-content;
+    min-width: 90px;
 }
 
 #timeslots-container .item {
